--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "background": { "scripts": ["fb.js"] },
   "manifest_version": 2,
   "content_scripts": [{
-      "matches": ["https://www.facebook.com/*"],
+      "matches": ["https://www.facebook.com/*","https://m.facebook.com/*"],
       "js": ["content.js"]
   }]
 }
